// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confidential Issue Sidebar Block renders for confidential = false and isEditable = false 1`] = `
<div
  class="block issuable-sidebar-item confidentiality"
  iid=""
>
  <div
    class="sidebar-collapsed-icon"
    title="Not confidential"
  >
    <gl-icon-stub
      name="eye"
      size="16"
    />
  </div>
   
  <div
    class="title hide-collapsed"
  >
    
    Confidentiality
    
    <!---->
  </div>
   
  <div
    class="value sidebar-item-value hide-collapsed"
  >
    <!---->
     
    <div
      class="no-value sidebar-item-value"
      data-testid="not-confidential"
    >
      <gl-icon-stub
        class="sidebar-item-icon inline"
        name="eye"
        size="16"
      />
      
      Not confidential
    
    </div>
  </div>
</div>
`;

exports[`Confidential Issue Sidebar Block renders for confidential = false and isEditable = true 1`] = `
<div
  class="block issuable-sidebar-item confidentiality"
  iid=""
>
  <div
    class="sidebar-collapsed-icon"
    title="Not confidential"
  >
    <gl-icon-stub
      name="eye"
      size="16"
    />
  </div>
   
  <div
    class="title hide-collapsed"
  >
    
    Confidentiality
    
    <a
      class="float-right confidential-edit"
      data-track-event="click_edit_button"
      data-track-label="right_sidebar"
      data-track-property="confidentiality"
      href="#"
    >
      Edit
    </a>
  </div>
   
  <div
    class="value sidebar-item-value hide-collapsed"
  >
    <!---->
     
    <div
      class="no-value sidebar-item-value"
      data-testid="not-confidential"
    >
      <gl-icon-stub
        class="sidebar-item-icon inline"
        name="eye"
        size="16"
      />
      
      Not confidential
    
    </div>
  </div>
</div>
`;

exports[`Confidential Issue Sidebar Block renders for confidential = true and isEditable = false 1`] = `
<div
  class="block issuable-sidebar-item confidentiality"
  iid=""
>
  <div
    class="sidebar-collapsed-icon"
    title="Confidential"
  >
    <gl-icon-stub
      name="eye-slash"
      size="16"
    />
  </div>
   
  <div
    class="title hide-collapsed"
  >
    
    Confidentiality
    
    <!---->
  </div>
   
  <div
    class="value sidebar-item-value hide-collapsed"
  >
    <!---->
     
    <div
      class="value sidebar-item-value hide-collapsed"
    >
      <gl-icon-stub
        class="sidebar-item-icon inline is-active"
        name="eye-slash"
        size="16"
      />
      
      This issue is confidential
    
    </div>
  </div>
</div>
`;

exports[`Confidential Issue Sidebar Block renders for confidential = true and isEditable = true 1`] = `
<div
  class="block issuable-sidebar-item confidentiality"
  iid=""
>
  <div
    class="sidebar-collapsed-icon"
    title="Confidential"
  >
    <gl-icon-stub
      name="eye-slash"
      size="16"
    />
  </div>
   
  <div
    class="title hide-collapsed"
  >
    
    Confidentiality
    
    <a
      class="float-right confidential-edit"
      data-track-event="click_edit_button"
      data-track-label="right_sidebar"
      data-track-property="confidentiality"
      href="#"
    >
      Edit
    </a>
  </div>
   
  <div
    class="value sidebar-item-value hide-collapsed"
  >
    <!---->
     
    <div
      class="value sidebar-item-value hide-collapsed"
    >
      <gl-icon-stub
        class="sidebar-item-icon inline is-active"
        name="eye-slash"
        size="16"
      />
      
      This issue is confidential
    
    </div>
  </div>
</div>
`;
